<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdvancedSearchActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
	<!-- Linear layout idea from 
	http://stackoverflow.com/questions/10751094/how-to-create-a-neat-two-columns-input-form-in-android -->
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_below="@id/textView1" >
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:text="@string/lblImageSize" />
	        
	        <Spinner
		        android:id="@+id/spinner1"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:layout_height="wrap_content"
		        android:entries="@array/arrayImageSizes" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	         >
	
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.25"
	            android:text="@string/lblColorFilter" />
	
	        <EditText
	            android:id="@+id/txtAuthor"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.75"
	            android:ems="10" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.25"
	            android:text="@string/lblImageType" />
	
	        <EditText
	            android:id="@+id/txtPublisher"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.75"
	            android:ems="10" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:layout_weight="0.25"
	            android:text="@string/lblSite" />
	
	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.75"
	            android:orientation="horizontal" >
	
	            <EditText
	                android:id="@+id/etSite"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:ems="5" />
	        </LinearLayout>
	    </LinearLayout>
	</LinearLayout>
</RelativeLayout>
